packages/equibel/equibel-0.8.9a1.tar.gz/equibel-0.8.9a1/equibel/parsers/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> FORMULA
Rule 1     FORMULA -> ATOM
Rule 2     FORMULA -> BOOLEAN
Rule 3     FORMULA -> COMPOUND
Rule 4     FORMULA -> LPAREN FORMULA RPAREN
Rule 5     ATOM -> IDENTIFIER
Rule 6     BOOLEAN -> TRUE
Rule 7     BOOLEAN -> FALSE
Rule 8     COMPOUND -> NEGATION
Rule 9     COMPOUND -> CONJUNCTION
Rule 10    COMPOUND -> DISJUNCTION
Rule 11    COMPOUND -> IMPLICATION
Rule 12    COMPOUND -> EQUIVALENCE
Rule 13    NEGATION -> NEG FORMULA
Rule 14    CONJUNCTION -> FORMULA AND FORMULA
Rule 15    DISJUNCTION -> FORMULA OR FORMULA
Rule 16    IMPLICATION -> FORMULA IMPLIES FORMULA
Rule 17    EQUIVALENCE -> FORMULA EQUIV FORMULA

Terminals, with rules where they appear

AND                  : 14
EQUIV                : 17
FALSE                : 7
IDENTIFIER           : 5
IMPLIES              : 16
LPAREN               : 4
NEG                  : 13
OR                   : 15
RPAREN               : 4
TRUE                 : 6
error                : 

Nonterminals, with rules where they appear

ATOM                 : 1
BOOLEAN              : 2
COMPOUND             : 3
CONJUNCTION          : 9
DISJUNCTION          : 10
EQUIVALENCE          : 12
FORMULA              : 4 13 14 14 15 15 16 16 17 17 0
IMPLICATION          : 11
NEGATION             : 8

Parsing method: LALR

state 0

    (0) S' -> . FORMULA
    (1) FORMULA -> . ATOM
    (2) FORMULA -> . BOOLEAN
    (3) FORMULA -> . COMPOUND
    (4) FORMULA -> . LPAREN FORMULA RPAREN
    (5) ATOM -> . IDENTIFIER
    (6) BOOLEAN -> . TRUE
    (7) BOOLEAN -> . FALSE
    (8) COMPOUND -> . NEGATION
    (9) COMPOUND -> . CONJUNCTION
    (10) COMPOUND -> . DISJUNCTION
    (11) COMPOUND -> . IMPLICATION
    (12) COMPOUND -> . EQUIVALENCE
    (13) NEGATION -> . NEG FORMULA
    (14) CONJUNCTION -> . FORMULA AND FORMULA
    (15) DISJUNCTION -> . FORMULA OR FORMULA
    (16) IMPLICATION -> . FORMULA IMPLIES FORMULA
    (17) EQUIVALENCE -> . FORMULA EQUIV FORMULA

    LPAREN          shift and go to state 8
    IDENTIFIER      shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 6
    NEG             shift and go to state 3

    EQUIVALENCE                    shift and go to state 1
    DISJUNCTION                    shift and go to state 14
    ATOM                           shift and go to state 4
    NEGATION                       shift and go to state 5
    BOOLEAN                        shift and go to state 7
    COMPOUND                       shift and go to state 9
    FORMULA                        shift and go to state 10
    IMPLICATION                    shift and go to state 11
    CONJUNCTION                    shift and go to state 2

state 1

    (12) COMPOUND -> EQUIVALENCE .

    AND             reduce using rule 12 (COMPOUND -> EQUIVALENCE .)
    OR              reduce using rule 12 (COMPOUND -> EQUIVALENCE .)
    IMPLIES         reduce using rule 12 (COMPOUND -> EQUIVALENCE .)
    EQUIV           reduce using rule 12 (COMPOUND -> EQUIVALENCE .)
    $end            reduce using rule 12 (COMPOUND -> EQUIVALENCE .)
    RPAREN          reduce using rule 12 (COMPOUND -> EQUIVALENCE .)


state 2

    (9) COMPOUND -> CONJUNCTION .

    AND             reduce using rule 9 (COMPOUND -> CONJUNCTION .)
    OR              reduce using rule 9 (COMPOUND -> CONJUNCTION .)
    IMPLIES         reduce using rule 9 (COMPOUND -> CONJUNCTION .)
    EQUIV           reduce using rule 9 (COMPOUND -> CONJUNCTION .)
    $end            reduce using rule 9 (COMPOUND -> CONJUNCTION .)
    RPAREN          reduce using rule 9 (COMPOUND -> CONJUNCTION .)


state 3

    (13) NEGATION -> NEG . FORMULA
    (1) FORMULA -> . ATOM
    (2) FORMULA -> . BOOLEAN
    (3) FORMULA -> . COMPOUND
    (4) FORMULA -> . LPAREN FORMULA RPAREN
    (5) ATOM -> . IDENTIFIER
    (6) BOOLEAN -> . TRUE
    (7) BOOLEAN -> . FALSE
    (8) COMPOUND -> . NEGATION
    (9) COMPOUND -> . CONJUNCTION
    (10) COMPOUND -> . DISJUNCTION
    (11) COMPOUND -> . IMPLICATION
    (12) COMPOUND -> . EQUIVALENCE
    (13) NEGATION -> . NEG FORMULA
    (14) CONJUNCTION -> . FORMULA AND FORMULA
    (15) DISJUNCTION -> . FORMULA OR FORMULA
    (16) IMPLICATION -> . FORMULA IMPLIES FORMULA
    (17) EQUIVALENCE -> . FORMULA EQUIV FORMULA

    LPAREN          shift and go to state 8
    IDENTIFIER      shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 6
    NEG             shift and go to state 3

    EQUIVALENCE                    shift and go to state 1
    DISJUNCTION                    shift and go to state 14
    ATOM                           shift and go to state 4
    NEGATION                       shift and go to state 5
    BOOLEAN                        shift and go to state 7
    COMPOUND                       shift and go to state 9
    FORMULA                        shift and go to state 15
    IMPLICATION                    shift and go to state 11
    CONJUNCTION                    shift and go to state 2

state 4

    (1) FORMULA -> ATOM .

    AND             reduce using rule 1 (FORMULA -> ATOM .)
    OR              reduce using rule 1 (FORMULA -> ATOM .)
    IMPLIES         reduce using rule 1 (FORMULA -> ATOM .)
    EQUIV           reduce using rule 1 (FORMULA -> ATOM .)
    $end            reduce using rule 1 (FORMULA -> ATOM .)
    RPAREN          reduce using rule 1 (FORMULA -> ATOM .)


state 5

    (8) COMPOUND -> NEGATION .

    AND             reduce using rule 8 (COMPOUND -> NEGATION .)
    OR              reduce using rule 8 (COMPOUND -> NEGATION .)
    IMPLIES         reduce using rule 8 (COMPOUND -> NEGATION .)
    EQUIV           reduce using rule 8 (COMPOUND -> NEGATION .)
    $end            reduce using rule 8 (COMPOUND -> NEGATION .)
    RPAREN          reduce using rule 8 (COMPOUND -> NEGATION .)


state 6

    (7) BOOLEAN -> FALSE .

    AND             reduce using rule 7 (BOOLEAN -> FALSE .)
    OR              reduce using rule 7 (BOOLEAN -> FALSE .)
    IMPLIES         reduce using rule 7 (BOOLEAN -> FALSE .)
    EQUIV           reduce using rule 7 (BOOLEAN -> FALSE .)
    $end            reduce using rule 7 (BOOLEAN -> FALSE .)
    RPAREN          reduce using rule 7 (BOOLEAN -> FALSE .)


state 7

    (2) FORMULA -> BOOLEAN .

    AND             reduce using rule 2 (FORMULA -> BOOLEAN .)
    OR              reduce using rule 2 (FORMULA -> BOOLEAN .)
    IMPLIES         reduce using rule 2 (FORMULA -> BOOLEAN .)
    EQUIV           reduce using rule 2 (FORMULA -> BOOLEAN .)
    $end            reduce using rule 2 (FORMULA -> BOOLEAN .)
    RPAREN          reduce using rule 2 (FORMULA -> BOOLEAN .)


state 8

    (4) FORMULA -> LPAREN . FORMULA RPAREN
    (1) FORMULA -> . ATOM
    (2) FORMULA -> . BOOLEAN
    (3) FORMULA -> . COMPOUND
    (4) FORMULA -> . LPAREN FORMULA RPAREN
    (5) ATOM -> . IDENTIFIER
    (6) BOOLEAN -> . TRUE
    (7) BOOLEAN -> . FALSE
    (8) COMPOUND -> . NEGATION
    (9) COMPOUND -> . CONJUNCTION
    (10) COMPOUND -> . DISJUNCTION
    (11) COMPOUND -> . IMPLICATION
    (12) COMPOUND -> . EQUIVALENCE
    (13) NEGATION -> . NEG FORMULA
    (14) CONJUNCTION -> . FORMULA AND FORMULA
    (15) DISJUNCTION -> . FORMULA OR FORMULA
    (16) IMPLICATION -> . FORMULA IMPLIES FORMULA
    (17) EQUIVALENCE -> . FORMULA EQUIV FORMULA

    LPAREN          shift and go to state 8
    IDENTIFIER      shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 6
    NEG             shift and go to state 3

    EQUIVALENCE                    shift and go to state 1
    DISJUNCTION                    shift and go to state 14
    ATOM                           shift and go to state 4
    NEGATION                       shift and go to state 5
    BOOLEAN                        shift and go to state 7
    COMPOUND                       shift and go to state 9
    FORMULA                        shift and go to state 16
    IMPLICATION                    shift and go to state 11
    CONJUNCTION                    shift and go to state 2

state 9

    (3) FORMULA -> COMPOUND .

    AND             reduce using rule 3 (FORMULA -> COMPOUND .)
    OR              reduce using rule 3 (FORMULA -> COMPOUND .)
    IMPLIES         reduce using rule 3 (FORMULA -> COMPOUND .)
    EQUIV           reduce using rule 3 (FORMULA -> COMPOUND .)
    $end            reduce using rule 3 (FORMULA -> COMPOUND .)
    RPAREN          reduce using rule 3 (FORMULA -> COMPOUND .)


state 10

    (0) S' -> FORMULA .
    (14) CONJUNCTION -> FORMULA . AND FORMULA
    (15) DISJUNCTION -> FORMULA . OR FORMULA
    (16) IMPLICATION -> FORMULA . IMPLIES FORMULA
    (17) EQUIVALENCE -> FORMULA . EQUIV FORMULA

    AND             shift and go to state 17
    OR              shift and go to state 19
    IMPLIES         shift and go to state 18
    EQUIV           shift and go to state 20


state 11

    (11) COMPOUND -> IMPLICATION .

    AND             reduce using rule 11 (COMPOUND -> IMPLICATION .)
    OR              reduce using rule 11 (COMPOUND -> IMPLICATION .)
    IMPLIES         reduce using rule 11 (COMPOUND -> IMPLICATION .)
    EQUIV           reduce using rule 11 (COMPOUND -> IMPLICATION .)
    $end            reduce using rule 11 (COMPOUND -> IMPLICATION .)
    RPAREN          reduce using rule 11 (COMPOUND -> IMPLICATION .)


state 12

    (5) ATOM -> IDENTIFIER .

    AND             reduce using rule 5 (ATOM -> IDENTIFIER .)
    OR              reduce using rule 5 (ATOM -> IDENTIFIER .)
    IMPLIES         reduce using rule 5 (ATOM -> IDENTIFIER .)
    EQUIV           reduce using rule 5 (ATOM -> IDENTIFIER .)
    $end            reduce using rule 5 (ATOM -> IDENTIFIER .)
    RPAREN          reduce using rule 5 (ATOM -> IDENTIFIER .)


state 13

    (6) BOOLEAN -> TRUE .

    AND             reduce using rule 6 (BOOLEAN -> TRUE .)
    OR              reduce using rule 6 (BOOLEAN -> TRUE .)
    IMPLIES         reduce using rule 6 (BOOLEAN -> TRUE .)
    EQUIV           reduce using rule 6 (BOOLEAN -> TRUE .)
    $end            reduce using rule 6 (BOOLEAN -> TRUE .)
    RPAREN          reduce using rule 6 (BOOLEAN -> TRUE .)


state 14

    (10) COMPOUND -> DISJUNCTION .

    AND             reduce using rule 10 (COMPOUND -> DISJUNCTION .)
    OR              reduce using rule 10 (COMPOUND -> DISJUNCTION .)
    IMPLIES         reduce using rule 10 (COMPOUND -> DISJUNCTION .)
    EQUIV           reduce using rule 10 (COMPOUND -> DISJUNCTION .)
    $end            reduce using rule 10 (COMPOUND -> DISJUNCTION .)
    RPAREN          reduce using rule 10 (COMPOUND -> DISJUNCTION .)


state 15

    (13) NEGATION -> NEG FORMULA .
    (14) CONJUNCTION -> FORMULA . AND FORMULA
    (15) DISJUNCTION -> FORMULA . OR FORMULA
    (16) IMPLICATION -> FORMULA . IMPLIES FORMULA
    (17) EQUIVALENCE -> FORMULA . EQUIV FORMULA

    AND             reduce using rule 13 (NEGATION -> NEG FORMULA .)
    OR              reduce using rule 13 (NEGATION -> NEG FORMULA .)
    IMPLIES         reduce using rule 13 (NEGATION -> NEG FORMULA .)
    EQUIV           reduce using rule 13 (NEGATION -> NEG FORMULA .)
    $end            reduce using rule 13 (NEGATION -> NEG FORMULA .)
    RPAREN          reduce using rule 13 (NEGATION -> NEG FORMULA .)

  ! AND             [ shift and go to state 17 ]
  ! OR              [ shift and go to state 19 ]
  ! IMPLIES         [ shift and go to state 18 ]
  ! EQUIV           [ shift and go to state 20 ]


state 16

    (4) FORMULA -> LPAREN FORMULA . RPAREN
    (14) CONJUNCTION -> FORMULA . AND FORMULA
    (15) DISJUNCTION -> FORMULA . OR FORMULA
    (16) IMPLICATION -> FORMULA . IMPLIES FORMULA
    (17) EQUIVALENCE -> FORMULA . EQUIV FORMULA

    RPAREN          shift and go to state 21
    AND             shift and go to state 17
    OR              shift and go to state 19
    IMPLIES         shift and go to state 18
    EQUIV           shift and go to state 20


state 17

    (14) CONJUNCTION -> FORMULA AND . FORMULA
    (1) FORMULA -> . ATOM
    (2) FORMULA -> . BOOLEAN
    (3) FORMULA -> . COMPOUND
    (4) FORMULA -> . LPAREN FORMULA RPAREN
    (5) ATOM -> . IDENTIFIER
    (6) BOOLEAN -> . TRUE
    (7) BOOLEAN -> . FALSE
    (8) COMPOUND -> . NEGATION
    (9) COMPOUND -> . CONJUNCTION
    (10) COMPOUND -> . DISJUNCTION
    (11) COMPOUND -> . IMPLICATION
    (12) COMPOUND -> . EQUIVALENCE
    (13) NEGATION -> . NEG FORMULA
    (14) CONJUNCTION -> . FORMULA AND FORMULA
    (15) DISJUNCTION -> . FORMULA OR FORMULA
    (16) IMPLICATION -> . FORMULA IMPLIES FORMULA
    (17) EQUIVALENCE -> . FORMULA EQUIV FORMULA

    LPAREN          shift and go to state 8
    IDENTIFIER      shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 6
    NEG             shift and go to state 3

    EQUIVALENCE                    shift and go to state 1
    DISJUNCTION                    shift and go to state 14
    ATOM                           shift and go to state 4
    NEGATION                       shift and go to state 5
    BOOLEAN                        shift and go to state 7
    COMPOUND                       shift and go to state 9
    FORMULA                        shift and go to state 22
    IMPLICATION                    shift and go to state 11
    CONJUNCTION                    shift and go to state 2

state 18

    (16) IMPLICATION -> FORMULA IMPLIES . FORMULA
    (1) FORMULA -> . ATOM
    (2) FORMULA -> . BOOLEAN
    (3) FORMULA -> . COMPOUND
    (4) FORMULA -> . LPAREN FORMULA RPAREN
    (5) ATOM -> . IDENTIFIER
    (6) BOOLEAN -> . TRUE
    (7) BOOLEAN -> . FALSE
    (8) COMPOUND -> . NEGATION
    (9) COMPOUND -> . CONJUNCTION
    (10) COMPOUND -> . DISJUNCTION
    (11) COMPOUND -> . IMPLICATION
    (12) COMPOUND -> . EQUIVALENCE
    (13) NEGATION -> . NEG FORMULA
    (14) CONJUNCTION -> . FORMULA AND FORMULA
    (15) DISJUNCTION -> . FORMULA OR FORMULA
    (16) IMPLICATION -> . FORMULA IMPLIES FORMULA
    (17) EQUIVALENCE -> . FORMULA EQUIV FORMULA

    LPAREN          shift and go to state 8
    IDENTIFIER      shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 6
    NEG             shift and go to state 3

    EQUIVALENCE                    shift and go to state 1
    DISJUNCTION                    shift and go to state 14
    ATOM                           shift and go to state 4
    NEGATION                       shift and go to state 5
    BOOLEAN                        shift and go to state 7
    COMPOUND                       shift and go to state 9
    FORMULA                        shift and go to state 23
    IMPLICATION                    shift and go to state 11
    CONJUNCTION                    shift and go to state 2

state 19

    (15) DISJUNCTION -> FORMULA OR . FORMULA
    (1) FORMULA -> . ATOM
    (2) FORMULA -> . BOOLEAN
    (3) FORMULA -> . COMPOUND
    (4) FORMULA -> . LPAREN FORMULA RPAREN
    (5) ATOM -> . IDENTIFIER
    (6) BOOLEAN -> . TRUE
    (7) BOOLEAN -> . FALSE
    (8) COMPOUND -> . NEGATION
    (9) COMPOUND -> . CONJUNCTION
    (10) COMPOUND -> . DISJUNCTION
    (11) COMPOUND -> . IMPLICATION
    (12) COMPOUND -> . EQUIVALENCE
    (13) NEGATION -> . NEG FORMULA
    (14) CONJUNCTION -> . FORMULA AND FORMULA
    (15) DISJUNCTION -> . FORMULA OR FORMULA
    (16) IMPLICATION -> . FORMULA IMPLIES FORMULA
    (17) EQUIVALENCE -> . FORMULA EQUIV FORMULA

    LPAREN          shift and go to state 8
    IDENTIFIER      shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 6
    NEG             shift and go to state 3

    EQUIVALENCE                    shift and go to state 1
    DISJUNCTION                    shift and go to state 14
    ATOM                           shift and go to state 4
    NEGATION                       shift and go to state 5
    BOOLEAN                        shift and go to state 7
    COMPOUND                       shift and go to state 9
    FORMULA                        shift and go to state 24
    IMPLICATION                    shift and go to state 11
    CONJUNCTION                    shift and go to state 2

state 20

    (17) EQUIVALENCE -> FORMULA EQUIV . FORMULA
    (1) FORMULA -> . ATOM
    (2) FORMULA -> . BOOLEAN
    (3) FORMULA -> . COMPOUND
    (4) FORMULA -> . LPAREN FORMULA RPAREN
    (5) ATOM -> . IDENTIFIER
    (6) BOOLEAN -> . TRUE
    (7) BOOLEAN -> . FALSE
    (8) COMPOUND -> . NEGATION
    (9) COMPOUND -> . CONJUNCTION
    (10) COMPOUND -> . DISJUNCTION
    (11) COMPOUND -> . IMPLICATION
    (12) COMPOUND -> . EQUIVALENCE
    (13) NEGATION -> . NEG FORMULA
    (14) CONJUNCTION -> . FORMULA AND FORMULA
    (15) DISJUNCTION -> . FORMULA OR FORMULA
    (16) IMPLICATION -> . FORMULA IMPLIES FORMULA
    (17) EQUIVALENCE -> . FORMULA EQUIV FORMULA

    LPAREN          shift and go to state 8
    IDENTIFIER      shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 6
    NEG             shift and go to state 3

    EQUIVALENCE                    shift and go to state 1
    DISJUNCTION                    shift and go to state 14
    ATOM                           shift and go to state 4
    NEGATION                       shift and go to state 5
    BOOLEAN                        shift and go to state 7
    COMPOUND                       shift and go to state 9
    FORMULA                        shift and go to state 25
    IMPLICATION                    shift and go to state 11
    CONJUNCTION                    shift and go to state 2

state 21

    (4) FORMULA -> LPAREN FORMULA RPAREN .

    AND             reduce using rule 4 (FORMULA -> LPAREN FORMULA RPAREN .)
    OR              reduce using rule 4 (FORMULA -> LPAREN FORMULA RPAREN .)
    IMPLIES         reduce using rule 4 (FORMULA -> LPAREN FORMULA RPAREN .)
    EQUIV           reduce using rule 4 (FORMULA -> LPAREN FORMULA RPAREN .)
    $end            reduce using rule 4 (FORMULA -> LPAREN FORMULA RPAREN .)
    RPAREN          reduce using rule 4 (FORMULA -> LPAREN FORMULA RPAREN .)


state 22

    (14) CONJUNCTION -> FORMULA AND FORMULA .
    (14) CONJUNCTION -> FORMULA . AND FORMULA
    (15) DISJUNCTION -> FORMULA . OR FORMULA
    (16) IMPLICATION -> FORMULA . IMPLIES FORMULA
    (17) EQUIVALENCE -> FORMULA . EQUIV FORMULA

    AND             reduce using rule 14 (CONJUNCTION -> FORMULA AND FORMULA .)
    OR              reduce using rule 14 (CONJUNCTION -> FORMULA AND FORMULA .)
    IMPLIES         reduce using rule 14 (CONJUNCTION -> FORMULA AND FORMULA .)
    EQUIV           reduce using rule 14 (CONJUNCTION -> FORMULA AND FORMULA .)
    $end            reduce using rule 14 (CONJUNCTION -> FORMULA AND FORMULA .)
    RPAREN          reduce using rule 14 (CONJUNCTION -> FORMULA AND FORMULA .)

  ! AND             [ shift and go to state 17 ]
  ! OR              [ shift and go to state 19 ]
  ! IMPLIES         [ shift and go to state 18 ]
  ! EQUIV           [ shift and go to state 20 ]


state 23

    (16) IMPLICATION -> FORMULA IMPLIES FORMULA .
    (14) CONJUNCTION -> FORMULA . AND FORMULA
    (15) DISJUNCTION -> FORMULA . OR FORMULA
    (16) IMPLICATION -> FORMULA . IMPLIES FORMULA
    (17) EQUIVALENCE -> FORMULA . EQUIV FORMULA

    EQUIV           reduce using rule 16 (IMPLICATION -> FORMULA IMPLIES FORMULA .)
    $end            reduce using rule 16 (IMPLICATION -> FORMULA IMPLIES FORMULA .)
    RPAREN          reduce using rule 16 (IMPLICATION -> FORMULA IMPLIES FORMULA .)
    AND             shift and go to state 17
    OR              shift and go to state 19
    IMPLIES         shift and go to state 18

  ! AND             [ reduce using rule 16 (IMPLICATION -> FORMULA IMPLIES FORMULA .) ]
  ! OR              [ reduce using rule 16 (IMPLICATION -> FORMULA IMPLIES FORMULA .) ]
  ! IMPLIES         [ reduce using rule 16 (IMPLICATION -> FORMULA IMPLIES FORMULA .) ]
  ! EQUIV           [ shift and go to state 20 ]


state 24

    (15) DISJUNCTION -> FORMULA OR FORMULA .
    (14) CONJUNCTION -> FORMULA . AND FORMULA
    (15) DISJUNCTION -> FORMULA . OR FORMULA
    (16) IMPLICATION -> FORMULA . IMPLIES FORMULA
    (17) EQUIVALENCE -> FORMULA . EQUIV FORMULA

    RPAREN          reduce using rule 15 (DISJUNCTION -> FORMULA OR FORMULA .)
    OR              reduce using rule 15 (DISJUNCTION -> FORMULA OR FORMULA .)
    IMPLIES         reduce using rule 15 (DISJUNCTION -> FORMULA OR FORMULA .)
    EQUIV           reduce using rule 15 (DISJUNCTION -> FORMULA OR FORMULA .)
    $end            reduce using rule 15 (DISJUNCTION -> FORMULA OR FORMULA .)
    AND             shift and go to state 17

  ! AND             [ reduce using rule 15 (DISJUNCTION -> FORMULA OR FORMULA .) ]
  ! OR              [ shift and go to state 19 ]
  ! IMPLIES         [ shift and go to state 18 ]
  ! EQUIV           [ shift and go to state 20 ]


state 25

    (17) EQUIVALENCE -> FORMULA EQUIV FORMULA .
    (14) CONJUNCTION -> FORMULA . AND FORMULA
    (15) DISJUNCTION -> FORMULA . OR FORMULA
    (16) IMPLICATION -> FORMULA . IMPLIES FORMULA
    (17) EQUIVALENCE -> FORMULA . EQUIV FORMULA

    $end            reduce using rule 17 (EQUIVALENCE -> FORMULA EQUIV FORMULA .)
    RPAREN          reduce using rule 17 (EQUIVALENCE -> FORMULA EQUIV FORMULA .)
    AND             shift and go to state 17
    OR              shift and go to state 19
    IMPLIES         shift and go to state 18
    EQUIV           shift and go to state 20

  ! AND             [ reduce using rule 17 (EQUIVALENCE -> FORMULA EQUIV FORMULA .) ]
  ! OR              [ reduce using rule 17 (EQUIVALENCE -> FORMULA EQUIV FORMULA .) ]
  ! IMPLIES         [ reduce using rule 17 (EQUIVALENCE -> FORMULA EQUIV FORMULA .) ]
  ! EQUIV           [ reduce using rule 17 (EQUIVALENCE -> FORMULA EQUIV FORMULA .) ]

